W-14825169: Update dependency org.apache.commons:commons-lang3 to v3.14.0