@@ -16,6 +16,7 @@
     <properties>
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
+            --add-reads=org.mule.distribution.embedded.impl=org.apache.commons.lang3
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.util=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.args>
